@@ -4,7 +4,6 @@ import static org.magic.tools.MTG.getEnabledPlugin;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.stream.Collectors;
 
 import org.magic.api.beans.MagicCard;
 import org.magic.api.beans.MagicDeck;
@@ -33,13 +32,13 @@ public class XMageDeckExport extends AbstractFormattedFileCardExport {
 		temp.append("NAME: " + deck.getName() + "\n");
 	
 		
-		for (MagicCard mc : deck.getMain().keySet().stream().filter(mc->mc!=deck.getCommander()).sorted((mc,mc2)->mc.getName().compareTo(mc2.getName())).collect(Collectors.toList())) {
+		for (MagicCard mc : deck.getMain().keySet().stream().filter(mc->mc!=deck.getCommander()).sorted((mc,mc2)->mc.getName().compareTo(mc2.getName())).toList()) {
 			temp.append(deck.getMain().get(mc)).append(" ").append("[").append(mc.getCurrentSet().getId())
 					.append(":").append(mc.getCurrentSet().getNumber()).append("]").append(" ")
 					.append(mc.getName()).append("\n");
 			notify(mc);
 		}
-		for (MagicCard mc : deck.getSideBoard().keySet().stream().sorted((mc,mc2)->mc.getName().compareTo(mc2.getName())).collect(Collectors.toList())) {
+		for (MagicCard mc : deck.getSideBoard().keySet().stream().sorted((mc,mc2)->mc.getName().compareTo(mc2.getName())).toList()) {
 			temp.append("SB: ").append(deck.getSideBoard().get(mc)).append(" ").append("[")
 					.append(mc.getCurrentSet().getId()).append(":").append(mc.getCurrentSet().getNumber())
 					.append("]").append(" ").append(mc.getName()).append("\n");
