@@ -16,7 +16,6 @@ import java.awt.event.MouseAdapter;
 import java.awt.event.MouseEvent;
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.swing.ImageIcon;
 import javax.swing.JButton;
@@ -137,7 +136,7 @@ public class WallpaperGUI extends MTGUIComponent {
 							logger.error(e);
 						}
 						return w;
-					}).collect(Collectors.toList());
+					}).toList();
 				}
 
 				@Override
