@@ -3,7 +3,6 @@ package org.magic.services.keywords;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
@@ -67,8 +66,8 @@ public class MTGGamePediaKeywordProvider extends AbstractKeyWordsManager {
 	{
 		if(statics==null || statics.isEmpty())
 		{
-			statics=parse("Static",SELEC_ABILITIES,true).stream().map(s->new MTGKeyWord(s, MTGKeyWord.EVENT.STATIC, MTGKeyWord.TYPE.ABILITIES)).collect(Collectors.toList());
-			statics.addAll(getEvergreens().stream().filter(mt->mt.getEvent()==EVENT.STATIC).collect(Collectors.toList()));
+			statics=parse("Static",SELEC_ABILITIES,true).stream().map(s->new MTGKeyWord(s, MTGKeyWord.EVENT.STATIC, MTGKeyWord.TYPE.ABILITIES)).toList();
+			statics.addAll(getEvergreens().stream().filter(mt->mt.getEvent()==EVENT.STATIC).toList());
 			
 			
 		}
@@ -80,8 +79,8 @@ public class MTGGamePediaKeywordProvider extends AbstractKeyWordsManager {
 	{
 		if(activateds==null || activateds.isEmpty())
 		{
-			activateds = parse("Activated",SELEC_ABILITIES,true).stream().map(s->new MTGKeyWord(s, MTGKeyWord.EVENT.ACTIVATED, MTGKeyWord.TYPE.ABILITIES)).collect(Collectors.toList());
-			activateds.addAll(getEvergreens().stream().filter(mt->mt.getEvent()==EVENT.ACTIVATED).collect(Collectors.toList()));
+			activateds = parse("Activated",SELEC_ABILITIES,true).stream().map(s->new MTGKeyWord(s, MTGKeyWord.EVENT.ACTIVATED, MTGKeyWord.TYPE.ABILITIES)).toList();
+			activateds.addAll(getEvergreens().stream().filter(mt->mt.getEvent()==EVENT.ACTIVATED).toList());
 		}
 		
 		return activateds;
@@ -92,8 +91,8 @@ public class MTGGamePediaKeywordProvider extends AbstractKeyWordsManager {
 	{
 		if(triggereds==null || triggereds.isEmpty())
 		{
-			triggereds = parse("Triggered",SELEC_ABILITIES,true).stream().map(s->new MTGKeyWord(s, MTGKeyWord.EVENT.TRIGGERED, MTGKeyWord.TYPE.ABILITIES)).collect(Collectors.toList());
-			triggereds.addAll(getEvergreens().stream().filter(mt->mt.getEvent()==EVENT.TRIGGERED).collect(Collectors.toList()));
+			triggereds = parse("Triggered",SELEC_ABILITIES,true).stream().map(s->new MTGKeyWord(s, MTGKeyWord.EVENT.TRIGGERED, MTGKeyWord.TYPE.ABILITIES)).toList();
+			triggereds.addAll(getEvergreens().stream().filter(mt->mt.getEvent()==EVENT.TRIGGERED).toList());
 		}
 		
 		return triggereds;
@@ -104,8 +103,8 @@ public class MTGGamePediaKeywordProvider extends AbstractKeyWordsManager {
 	{
 		if(actions==null || actions.isEmpty())
 		{
-				actions= parse("Keyword_action","div.crDiv li a",false).stream().map(s->new MTGKeyWord(s, MTGKeyWord.TYPE.ACTION)).collect(Collectors.toList());
-				actions.addAll(getEvergreens().stream().filter(mt->mt.getType()==TYPE.ACTION).collect(Collectors.toList()));
+				actions= parse("Keyword_action","div.crDiv li a",false).stream().map(s->new MTGKeyWord(s, MTGKeyWord.TYPE.ACTION)).toList();
+				actions.addAll(getEvergreens().stream().filter(mt->mt.getType()==TYPE.ACTION).toList());
 				actions.add(new MTGKeyWord("Flip", TYPE.ACTION));
 		}
 		return actions;
@@ -115,7 +114,7 @@ public class MTGGamePediaKeywordProvider extends AbstractKeyWordsManager {
 	public List<MTGKeyWord> getWordsAbilities()
 	{
 		if(words==null || words.isEmpty())
-			words= parse("Ability_word","div.div-col li a",false).stream().map(s->new MTGKeyWord(s, MTGKeyWord.TYPE.WORD)).collect(Collectors.toList());
+			words= parse("Ability_word","div.div-col li a",false).stream().map(s->new MTGKeyWord(s, MTGKeyWord.TYPE.WORD)).toList();
 
 		return words;
 	}
@@ -129,7 +128,7 @@ public class MTGGamePediaKeywordProvider extends AbstractKeyWordsManager {
 				String url = isKeyword ? BASE_URI+"Category:Keywords/"+page : BASE_URI+page;
 				Document d = URLTools.extractHtml(url);
 				Elements els = d.select(select);
-				list = els.stream().map(Element::text).collect(Collectors.toList());
+				list = els.stream().map(Element::text).toList();
 				list.remove(page+" ability");
 				list.remove("Keyword_action");
 				
